# autogen_crash_course

./: .gitignore  pyproject.toml
sections/section_01/: part_01.py  part_02.py  part_03.py
